--- a/FT/NewProject/package.json
+++ b/FT/NewProject/package.json
@@ -10,5 +10,8 @@
   "license": "ISC",
   "devDependencies": {
     "json-server": "^0.17.0"
+  },
+  "dependencies": {
+    "es6-promise": "^4.2.8"
   }
 }
